--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,15 @@
 body {
   background-image:  url("finish.png")
 }
-#racers {
-  position: absolute;
-}
-
-#finish {
-  poistion: relative;
-  float:right;
-}
 
 #flash {
   width: 200px;
   height: 200px;
+  position: absolute;
+}
+
+#greenArrow {
+  position: absolute;
 }
 
 #start_race {
