--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,11 +5,10 @@ body {
 #flash {
   width: 200px;
   height: 200px;
-  position: absolute;
 }
 
 #greenArrow {
-  position: absolute;
+  position: relative;
 }
 
 #start_race {
